--- a/task-list.html
+++ b/task-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Manager</title>
+    <title>Task List</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -12,21 +12,10 @@
       crossorigin="anonymous"
     />
     <link href="resources/css/style.css" type="text/css" rel="stylesheet" />
-    
   </head>
   <body>
-    <h1>Hello World this is the team</h1>
-    <p>Tekalegn, Jorge matute ,Esayas , Manaye</p>
-
-    <main class="grid-container">
+    <main class="container">
       <header></header>
-      <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-     
-      </div>
       <footer></footer>
     </main>
   </body>
