--- a/task-list.html
+++ b/task-list.html
@@ -12,11 +12,31 @@
       crossorigin="anonymous"
     />
     <link href="resources/css/style.css" type="text/css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   </head>
   <body>
     <main class="container">
-      <header></header>
-      <footer></footer>
+      <header>
+        <h1>Task List</h1>
+        <h3>ADD NEW TASK</h3>
+        <div class="task-name"><p>Task Name</p>
+          <input type="text" placeholder="Place holder">
+        </div>
+        <div class="task-description"><p>Task Description</p>
+          <input type="text" placeholder="Place holder">
+        </div>
+        <div class="due-date"><p>Due Date</p>
+          <input type="date" name="due-date" id="due-date">
+        </div>
+        <div class="task-assigment"><p>Assigned to:</p>
+          <input type="text" placeholder="Place holder">
+          <button class="btn">ADD TASK</button>
+        </div>
+
+      </header>
+      <footer>
+      </footer>
     </main>
   </body>
 </html>
