--- a/task-list.html
+++ b/task-list.html
@@ -19,7 +19,7 @@
     <main class="container">
       <header>
         <h1>Task List</h1>
-        <h3>ADD NEW TASK</h3>
+        <h3>Add New Task</h3>
         <div class="task-name"><p>Task Name</p>
           <input type="text" placeholder="Place holder">
         </div>
