autors info added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+  The Task-List-Manager is a web app used to create, save, update, view, and delete tasks inside a web browser.
+  Technlogies used: HTML, CSS, JS, and the app uses JavaScript localStorage to store data.  
+
+  *@authors  Tekalegn, Jorge, Esayas, and Manaye 
+  *@version 1.0
+  *@since   05-07-2021
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,7 +21,7 @@
   <body onload="printTaskList();">
     <main class="container">
       <div class="grid-container">
-        <div class="heading1"><h1>Task List</h1></div>
+        <div class="heading1"><h1>Task List Manager</h1></div>
 
         <div class="form1">
           <form onSubmit="processInput();" id="taskForm" method="GET">
