--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 id="taskName"
                 name="taskName"
               />
+              <span id="tspan" style="color: red; font-size: 12px"
+                ><em></em
+              ></span>
             </div>
 
             <div class="form-group">
