--- a/index.html
+++ b/index.html
@@ -17,77 +17,85 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <!--<body onload="printTaskList();"> -->
   <body onload="printTaskList();">
     <main class="container">
       <div class="grid-container">
         <div class="heading1"><h1>Task List Manager</h1></div>
 
         <div class="form1">
-          <form onSubmit="processInput();" id="taskForm" method="GET">
-            <div class="form-group">
-              <label for="taskName">Task Name:</label>
-              <input
-                type="text"
-                class="form-control"
-                id="taskName"
-                name="taskName"
-              />
-              <span id="tspan" style="color: red; font-size: 12px"
-                ><em></em
-              ></span>
-            </div>
+          <div id="error_message"></div>
+          <div id="aBox"></div>
+          <div class="form-group">
+            <label for="taskName">Task Name:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="taskName"
+              name="taskName"
+            />
+            <span id="tspan" style="color: red; font-size: 12px"
+              ><em></em
+            ></span>
+          </div>
 
-            <div class="form-group">
-              <label for="taskDesc">Task Description:</label>
-              <textarea
-                id="taskDesc"
-                name="taskDesc"
-                class="md-textarea form-control"
-                rows="3"
-              ></textarea>
+          <div class="form-group">
+            <label for="taskDesc">Task Description:</label>
+            <textarea
+              id="taskDesc"
+              name="taskDesc"
+              class="md-textarea form-control"
+              rows="3"
+            ></textarea>
+            <span id="dspan" style="color: red; font-size: 12px"
+              ><em></em
+            ></span>
 
-              <div class="row">
-                <div class="col">
-                  <div class="form-group">
-                    <label for="assignedTo">Assigned To:</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="assignedTo"
-                      name="assignedTo"
-                    />
-                  </div>
-                </div>
-
-                <div class="col">
-                  <div class="form-group">
-                    <label for="duedate">Due Date:</label>
-                    <input
-                      type="date"
-                      class="form-control"
-                      id="duedate"
-                      name="duedate"
-                    />
-                  </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="assignedTo">Assigned To:</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="assignedTo"
+                    name="assignedTo"
+                  />
+                  <span id="aspan" style="color: red; font-size: 12px"
+                    ><em></em
+                  ></span>
                 </div>
               </div>
 
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button
-                    type="submit"
-                    onSubmit="processInput()"
-                    class="btn btn-dark"
-                  >
-                    Add Task
-                  </button>
+              <div class="col">
+                <div class="form-group">
+                  <label for="duedate">Due Date:</label>
+                  <input
+                    type="date"
+                    class="form-control"
+                    id="duedate"
+                    name="duedate"
+                  />
+                  <span id="dtspan" style="color: red; font-size: 12px"
+                    ><em></em
+                  ></span>
                 </div>
               </div>
             </div>
 
-            <br />
-          </form>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <button
+                  type="button"
+                  onclick="processInput()"
+                  class="btn btn-dark"
+                >
+                  Add Task
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <br />
           <!---->
           <div id="card_place"></div>
           <!---->
