--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body onload="printTaskList();">
+    <!--nav- bar content-->
+    <div class="nav">
+      <div class="container"></div>
+        <ul>
+          <a href= target="_blank"><li >Who are We?</li></a>
+          <li>About</li>
+          <a href="https://www.linkedin.com/in/jlm10/" target="_blank"><li>Contact Us</li></a>
+        </ul>
+      </div>
+    </div>
     <main class="container">
       <div class="grid-container">
         <div class="heading1"><h1>Task List Manager</h1></div>
@@ -26,12 +37,13 @@
           <div id="error_message"></div>
           <div id="aBox"></div>
           <div class="form-group">
-            <label for="taskName">Task Name:</label>
+            <label for="taskName">Task:</label>
             <input
               type="text"
               class="form-control"
               id="taskName"
               name="taskName"
+              placeholder="Name"
             />
             <span id="tspan" style="color: red; font-size: 12px"
               ><em></em
@@ -45,6 +57,7 @@
               name="taskDesc"
               class="md-textarea form-control"
               rows="3"
+              placeholder="Drescribe Your Task"
             ></textarea>
             <span id="dspan" style="color: red; font-size: 12px"
               ><em></em
@@ -53,12 +66,13 @@
             <div class="row">
               <div class="col">
                 <div class="form-group">
-                  <label for="assignedTo">Assigned To:</label>
+                  <label for="assignedTo"> To:</label>
                   <input
                     type="text"
                     class="form-control"
                     id="assignedTo"
                     name="assignedTo"
+                    placeholder="Assigned"
                   />
                   <span id="aspan" style="color: red; font-size: 12px"
                     ><em></em
@@ -99,6 +113,68 @@
           <!---->
           <div id="card_place"></div>
           <!---->
+        </div>
+      </div>
+       <!-- Meet the Team Section -->
+    <div class="row bg-dark rounded-top ">
+      <div class="col">
+        <h2 class="text-white text-center display-4 my-3">Meet the Team</h2>
+      </div>
+    </div>
+
+    <!-- Team Pictures Carousel -->
+    <div class="row bg-dark rounded-bottom pb-5">
+      <div class="col">
+        <!-- Carousel Component -->
+        <div id="carouselExampleControls" class="carousel slide w-50 mx-auto" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="Photos/galaxy_universe-1280x1024.jpg" class="d-block w-100" alt="Tekalegn">
+              <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Takelang</spam></p>
+              </div>
+              
+            </div>
+            <div class="carousel-item">
+              <img src="Photos/IMG-20180719-WA0003.jpg" class="d-block w-100" alt="Jorge">
+              <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Jorge</spam></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="Photos/galaxy_universe-1280x1024.jpg" class="d-block w-100" alt="Esays">
+               <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Esays</spam></p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="Photos/galaxy_universe-1280x1024.jpg" class="d-block w-100" alt="Manaye">
+               <div class="carousel-caption bg-dark rounded-pill py-0">
+                <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Manaye</spam></p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+     <!-- Bootstrap's JavaScript Files -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    
+  </div>
+      <div class="footer">
+        <div class="container">
+          <p>&copy; Team 4 JWD Generation"</p>
         </div>
       </div>
     </main>
