--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
           <br />
           <div>
-            <select name="filter" id="filter" >
+            <select name="filter" id="filter" onclick="showFiltered(event)" >
               <option value="all">All</option>
               <option value="completed">Completed</option>
               <option value="uncompleted">Uncompleted</option>
@@ -141,7 +141,7 @@
             <div class="carousel-item active">
               <img src="Photos/galaxy_universe-1280x1024.jpg" class="d-block w-100" alt="Tekalegn">
               <div class="carousel-caption bg-dark rounded-pill py-0">
-                <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Takelang</spam></p>
+                <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Tekalegn</spam></p>
               </div>
               
             </div>
