about page modified

--- a/waw.html
+++ b/waw.html
@@ -30,9 +30,9 @@
             <div id="carouselExampleControls" class="carousel slide w-50 mx-auto" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="Photos/galaxy_universe-1280x1024.jpg" class="d-block w-100" alt="Tekalegn">
+                  <img src="Photos/teka.jpg" class="d-block w-100" alt="Tekalegn">
                   <div class="carousel-caption bg-dark rounded-pill py-0">
-                    <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Takelang</spam></p>
+                    <p class="font-weight-bold text-center mb-0">Team4 <spam class="font-weight-light">Tekalegn</spam></p>
                   </div>
                   
                 </div>
@@ -70,7 +70,7 @@
         <div class="nav">
           <ul>
             <li>Contact us</li>
-            <li>Takelang </li>
+            <a  class="bnt" href="https://www.linkedin.com/in/teka-fisseha-4015151a1/" target="_blank"><li>Tekalegn<li></a>
             <a  class="bnt" href="https://www.linkedin.com/in/jorge-luis-matute-castellanos-630215209/" target="_blank"><li>Jorge<li></a>
             <li>Esayas</li>
             <li>Manaye</li>
